cleaned up login form

--- a/ngGearSilo/src/app/components/testing/testing.component.html
+++ b/ngGearSilo/src/app/components/testing/testing.component.html
@@ -11,14 +11,18 @@
               <div>
                 <label></label>
                 <input
+                  id="username"
+                  name="username"
                   class="form-control form-control-lg rounded-5"
-                  placeholder="user name"
+                  placeholder="username"
                   required
                 />
               </div>
               <div>
                 <label></label>
                 <input
+                  id="password"
+                  name="password"
                   class="form-control form-control-lg rounded-5"
                   type="password"
                   placeholder="password"
