--- a/ngGearSilo/src/app/components/login/login.component.html
+++ b/ngGearSilo/src/app/components/login/login.component.html
@@ -1,29 +1,69 @@
-<div class="container">
-  <div class="login-form-1">
-    <div class="mx-auto" style="width: 20%;">
-      <H1>Login</H1>
-    </div>
-    <form #loginForm="ngForm" ngNativeValidate id="login-form" class="text-left">
-      <div class="login-form-main-message"></div>
-      <div class="main-login-form">
-        <div class="login-group">
-          <div class="form-group">
-            <label for="username">Email:
-              <input type="email" class="form-control" id="username" name="username" placeholder="username" ngModel
-                required></label>
-          </div>
-          <div class="form-group">
-            <label for="password">Password:
-              <input type="password" class="form-control" id="password" name="password" placeholder="password" ngModel
-                required></label>
+<div class="container-fluid jumbotron">
+  <div class="container login-form-1">
+    <div class="row">
+      <div class="col-sm-9 col-md-7 col-lg-5 mx-auto">
+        <div class="card rounded shadow shadow-sm">
+          <div class="card-body">
+            <h4 class="card-title text-center mb-0">
+              <strong>Sign In</strong>
+            </h4>
+            <hr />
+            <form
+              #loginForm="ngForm"
+              ngNativeValidate
+              id="login-form"
+              class="text-center"
+            >
+              <div class="login-form-main-message"></div>
+              <div class="main-login-form">
+                <div class="login-group">
+                  <div class="form-group">
+                    <label class="text-left" for="username"
+                      >Email
+                      <input
+                        type="email"
+                        class="form-control"
+                        id="username"
+                        name="username"
+                        placeholder="username is your email"
+                        ngModel
+                        required
+                    /></label>
+                  </div>
+                  <div class="form-group">
+                    <label class="text-left" for="password"
+                      >Password
+                      <input
+                        type="password"
+                        class="form-control"
+                        id="password"
+                        name="password"
+                        placeholder="password"
+                        ngModel
+                        required
+                    /></label>
+                  </div>
+                </div>
+                <hr />
+                <button
+                  type="submit"
+                  class="login-button btn btn-dark"
+                  (click)="login(loginForm)"
+                >
+                  Sign in
+                </button>
+              </div>
+              <br />
+              <div class="etc-login-form">
+                <p>
+                  Not a user yet?
+                  <a [routerLink]="['/register']">Join our community.</a>
+                </p>
+              </div>
+            </form>
           </div>
         </div>
-        <button type="submit" class="login-button btn btn-dark" (click)="login(loginForm)">Sign in</button>
       </div>
-      <br>
-      <div class="etc-login-form">
-        <p>Not a user yet? <a [routerLink]="['/register']">Join our community.</a></p>
-      </div>
-    </form>
+    </div>
   </div>
 </div>
