cleaned up login

--- a/ngGearSilo/src/app/components/login/login.component.html
+++ b/ngGearSilo/src/app/components/login/login.component.html
@@ -50,7 +50,7 @@
                   class="login-button btn btn-dark"
                   (click)="login(loginForm)"
                 >
-                  Sign in
+                  Enter the Silo
                 </button>
               </div>
               <br />
