crud stubbs placed into admin via <app>

--- a/ngGearSilo/src/app/components/admin/admin.component.html
+++ b/ngGearSilo/src/app/components/admin/admin.component.html
@@ -125,10 +125,7 @@
             >
               Back
             </button>
-            <button class="btn btn-outline-success">
-              <!-- (click)="setUpdateUser()" -->
-              Edit
-            </button>
+            <app-user-crud></app-user-crud> <!-- Edit / Delete Button -->
           </div>
         </div>
       </ng-template>
@@ -206,9 +203,7 @@
             >
               Back
             </button>
-            <button class="btn btn-outline-success">
-              Edit
-            </button>
+            <app-gear-crud></app-gear-crud>
           </div>
         </div>
       </ng-template>
@@ -290,9 +285,7 @@
             >
               Back
             </button>
-            <button class="btn btn-outline-success">
-              Edit
-            </button>
+            <app-resv-crud></app-resv-crud>
           </div>
         </div>
       </ng-template>
