--- a/ngGearSilo/src/app/components/admin/user-crud/user-crud.component.html
+++ b/ngGearSilo/src/app/components/admin/user-crud/user-crud.component.html
@@ -1,1 +1,7 @@
-<p>user-crud works!</p>
+<button class="btn btn-outline-warning">
+  Edit
+</button>
+<!-- (click)="setUpdateUser()" -->
+<button class="btn btn-outline-danger">
+  Disable
+</button>
