details page tidy-up

--- a/ngGearSilo/src/app/components/profile/profile.component.html
+++ b/ngGearSilo/src/app/components/profile/profile.component.html
@@ -427,11 +427,11 @@
                       <!-- <td>{{res.approved}}</td> -->
                       <td>
 
-                        <label class="switch">
+                        <!-- <label class="switch">
                           <input type="checkbox" data-toggle="toggle" data-on=1 data-off=0
                             placeholder="{{res.approved}}">
                           <span class="slider"></span>
-                        </label>
+                        </label> -->
 
                       </td>
                     </tr>
