--- a/ngGearSilo/src/app/components/gear-list/gear-list.component.css
+++ b/ngGearSilo/src/app/components/gear-list/gear-list.component.css
@@ -196,8 +196,9 @@
 
 .resImage {
   position: absolute;
-  clip: rect(0px,400px,250px,0px);
+  clip: rect(0px,400px,300px,0px);
   align-content: center;
+  margin-top: -50px;
   background-position: center center !important;
   height: auto;
   max-height: 300px !important;
