--- a/ngGearSilo/src/app/components/gear-list/gear-list.component.html
+++ b/ngGearSilo/src/app/components/gear-list/gear-list.component.html
@@ -123,8 +123,10 @@
                       <img style="max-width:100px; height: auto;" class="img-responsive" src="{{item.imageUrl}}">
                     </div>
                     <div class="col-xs-4">
-                      <h4 class="product-name"><strong>{{item.name | titlecase }}</strong></h4>
+                      <h4 style="margin-top:  -5px;" class="product-name"><strong>{{item.name | titlecase }}</strong>
+                      </h4>
                       <h4><small>{{item.description | titlecase }}</small></h4>
+                      <h4 style="margin-top:  -10px;"><small>{{item.price | currency }}/ day</small></h4>
                     </div>
                     <div class="col-xs-6">
                       <img class="pic" src="{{item.user.imageUrl}}">
@@ -161,21 +163,25 @@
       <div *ngIf="selected">
         <div class="list-group">
           <div class="list-group-item" *ngIf="this.selected && this.selected.id && this.selected.id > 0">
-            <h2>{{selected.name | titlecase}}</h2>
-            <div class="row">
-              <div class="column">
+            <div style="align-items: center; align-content: center; align-self: auto;">
 
-                <div style="max-width:600px; max-height:500px !important; padding: 10px; overflow: hidden;">
-                  <img class="resImage" src="{{selected.imageUrl}}" alt="">
+              <h2 style="margin-left: 800px">{{selected.name | titlecase}}</h2>
+
+
+              <div class="row">
+                <div class="column">
+
+                  <div style="max-width:600px; max-height:500px !important; padding: 10px; overflow: hidden;">
+                    <img class="resImage" src="{{selected.imageUrl}}" alt="">
+                  </div>
+
                 </div>
 
-              </div>
 
 
 
-
-              <!-- CAROUSEL - LEFT-->
-              <!-- <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+                <!-- CAROUSEL - LEFT-->
+                <!-- <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
                   <ol class="carousel-indicators">
                     <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
                     <li data-target="#carouselExampleIndicators" data-slide-to="1" class="active"></li>
@@ -200,8 +206,8 @@
                       </div>
                     </div> -->
 
-              <!-- LEFT AND RIGHT BUTTONS -->
-              <!-- <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+                <!-- LEFT AND RIGHT BUTTONS -->
+                <!-- <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
                     <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                     <span class="sr-only">Previous</span>
                   </a>
@@ -214,49 +220,49 @@
               </div>
 
 
-                <!-- RIGHT SIDE - DETAILS -->
-              <div class="column">
-                <div class="right">
-                  <li class="list-group-item" *ngIf="this.selected && this.selected.description">
-                    Description:
-                    {{selected.description | lowercase }}</li>
-                  <li class="list-group-item ">Price per day: {{selected.price | currency }}</li>
-                  <li class="list-group-item ">Condition: {{selected.gearCondition | lowercase }}</li>
-                  <li class="list-group-item " *ngIf="selected.available == true">Available: Yes!</li>
-                  <li class="list-group-item " *ngIf="selected.available == false">Available: Sorry, it is not
-                    available
-                    to rent
-                    at this time.</li>
+               <!-- RIGHT SIDE - DETAILS  -->
+                <div class="column">
+                  <div class="right">
+                    <li class="list-group-item" *ngIf="this.selected && this.selected.description">
+                      Description:
+                      {{selected.description | lowercase }}</li>
+                    <li class="list-group-item ">Price per day: {{selected.price | currency }}</li>
+                    <li class="list-group-item ">Condition: {{selected.gearCondition | lowercase }}</li>
+                    <li class="list-group-item " *ngIf="selected.available == true">Available: Yes!</li>
+                    <li class="list-group-item " *ngIf="selected.available == false">Available: Sorry, it is not
+                      available
+                      to rent
+                      at this time.</li>
 
-                  <li class="list-group-item ">Rent From: {{selected.user.firstName | titlecase }}
-                    {{selected.user.lastName | titlecase }}</li>
-                  <li class="list-group-item ">Location: {{selected.user.address.city | titlecase }},
-                    {{selected.user.address.state | titlecase }} {{selected.user.address.postalCode}}</li>
+                    <li class="list-group-item ">Rent From: {{selected.user.firstName | titlecase }}
+                      {{selected.user.lastName | titlecase }}</li>
+                    <li class="list-group-item ">Location: {{selected.user.address.city | titlecase }},
+                      {{selected.user.address.state | titlecase }} {{selected.user.address.postalCode}}</li>
 
-                  <div class="btn-group" role="group" aria-label="Basic example">
                     <div class="btn-group" role="group" aria-label="Basic example">
-                      <button (click)="selected=null" class="btn btn-dark my-2 my-sm-0">Back to the list</button>
-                    </div>
-                    <div class="btn-group" role="group" aria-label="Basic example">
-                      <button (click)="startReservation()" class="btn btn-warning my-2 my-sm-0">Make a
-                        Reservation</button>
+                      <div class="btn-group" role="group" aria-label="Basic example">
+                        <button (click)="selected=null" class="btn btn-dark my-2 my-sm-0">Back to the list</button>
+                      </div>
+                      <div class="btn-group" role="group" aria-label="Basic example">
+                        <button (click)="startReservation()" class="btn btn-warning my-2 my-sm-0">Make a
+                          Reservation</button>
+                      </div>
                     </div>
                   </div>
                 </div>
               </div>
             </div>
-          </div>
 
 
 
 
 
-          <button class="open-button" (click)="openForm()">Chat</button>
-          <div class="chat-popup" id="myForm">
-            <form style="background-color: white; opacity: 1;" action="/action_page.php" class="form-container">
-              <label for="msg"><b>Message</b></label>
-              <textarea placeholder="Type message.." name="msg" required></textarea>
-              <button type="submit" class="btn">Send</button>
-              <button type="button" class="btn cancel" (click)="closeForm()">Close</button>
-            </form>
-          </div>
+            <button class="open-button" (click)="openForm()">Chat</button>
+            <div class="chat-popup" id="myForm">
+              <form style="background-color: white; opacity: 1;" action="/action_page.php" class="form-container">
+                <label for="msg"><b>Message</b></label>
+                <textarea placeholder="Type message.." name="msg" required></textarea>
+                <button type="submit" class="btn">Send</button>
+                <button type="button" class="btn cancel" (click)="closeForm()">Close</button>
+              </form>
+            </div>
