--- a/ngGearSilo/src/app/components/gear-list/gear-list.component.html
+++ b/ngGearSilo/src/app/components/gear-list/gear-list.component.html
@@ -2,6 +2,8 @@
 <link href="//netdna.bootstrapcdn.com/bootstrap/3.0.3/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
 <!------ Include the above in your HEAD tag ---------->
 
+
+
 <div class="contaner-fluid">
   <div class="row">
     <div class="col-1"></div>
@@ -136,12 +138,12 @@
                       <div class="col-xs-4">
                         <p>{{item.user.firstName | titlecase}}</p>
                         <br>
-                        <ngb-rating [(rate)]="averageRating" [readonly]="true">
+                        <ngb-rating [(rate)]="item.user.userLenderRating" [readonly]="true">
                           <ng-template let-fill="fill" let-index="index">
                             <span class="star" [class.filled]="fill === 100" [class.bad]="index < 0">&#9733;</span>
                           </ng-template>
                         </ngb-rating>
-                        <h6 style="margin-left: -10px ;">User Rating: <b style="color: grey;">{{averageRating}}</b></h6>
+                        <h6 style="margin-left: -10px ;">User Rating: <b style="color: grey;">{{item.user.userLenderRating}}</b></h6>
                       </div>
                     </div>
                   </div>
@@ -162,7 +164,7 @@
       <!-- RESERVATION PAGE -->
       <div *ngIf="selected">
         <div class="list-group">
-          <div class="list-group-item" *ngIf="this.selected && this.selected.id && this.selected.id > 0">
+          <div *ngIf="this.selected && this.selected.id && this.selected.id > 0">
             <div style="align-items: center; align-content: center; align-self: auto;">
 
               <h2 style="margin-left: 800px">{{selected.name | titlecase}}</h2>
@@ -223,20 +225,20 @@
                <!-- RIGHT SIDE - DETAILS  -->
                 <div class="column">
                   <div class="right">
-                    <li class="list-group-item" *ngIf="this.selected && this.selected.description">
+                    <li class="list-group" *ngIf="this.selected && this.selected.description">
                       Description:
                       {{selected.description | lowercase }}</li>
-                    <li class="list-group-item ">Price per day: {{selected.price | currency }}</li>
-                    <li class="list-group-item ">Condition: {{selected.gearCondition | lowercase }}</li>
-                    <li class="list-group-item " *ngIf="selected.available == true">Available: Yes!</li>
-                    <li class="list-group-item " *ngIf="selected.available == false">Available: Sorry, it is not
+                    <li class="list-group ">Price per day: {{selected.price | currency }}</li>
+                    <li class="list-group ">Condition: {{selected.gearCondition | lowercase }}</li>
+                    <li class="list-group " *ngIf="selected.available == true">Available: Yes!</li>
+                    <li class="list-group " *ngIf="selected.available == false">Available: Sorry, it is not
                       available
                       to rent
                       at this time.</li>
 
-                    <li class="list-group-item ">Rent From: {{selected.user.firstName | titlecase }}
+                    <li class="list-group ">Rent From: {{selected.user.firstName | titlecase }}
                       {{selected.user.lastName | titlecase }}</li>
-                    <li class="list-group-item ">Location: {{selected.user.address.city | titlecase }},
+                    <li class="list-group ">Location: {{selected.user.address.city | titlecase }},
                       {{selected.user.address.state | titlecase }} {{selected.user.address.postalCode}}</li>
 
                     <div class="btn-group" role="group" aria-label="Basic example">
@@ -266,3 +268,7 @@
                 <button type="button" class="btn cancel" (click)="closeForm()">Close</button>
               </form>
             </div>
+
+
+
+
