--- a/ngGearSilo/src/app/components/gear-list/gear-list.component.css
+++ b/ngGearSilo/src/app/components/gear-list/gear-list.component.css
@@ -2,11 +2,21 @@
   width: 50%;
   max-width: 400px;
   height: auto;
+
 }
 .gear-img-list {
   width: 50%;
   max-width: 150px;
   height: auto;
+
+}
+.contaner-fluid {
+  font-family: Arial, Helvetica, sans-serif;
+
+}
+
+.btn {
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 
 .active-pink-4 input[type=text]:focus:not([readonly]) {
@@ -205,6 +215,10 @@
   max-height: 300px !important;
   overflow: hidden;
   border-radius: 2%;
+  border-left: orange;
+  border-bottom: orange;
+  border-style: solid;
+  mask-border-width: 5px;
 
 
 }
