--- a/ngGearSilo/src/app/components/profile/profile.component.html
+++ b/ngGearSilo/src/app/components/profile/profile.component.html
@@ -424,7 +424,6 @@
                       <td> {{res.userShopper.firstName | titlecase}} {{res.userShopper.lastName | titlecase}}</td>
                       <td>{{res.openDate | date}}</td>
                       <td>{{res.closeDate | date}}</td>
-                      <td>{{res.approved}}</td>
                       <td>
 
 
@@ -448,8 +447,7 @@
                             <span class="input-group-text" style="width: 117px"
                               id="inputGroup-sizing-default">Approved</span>
                           </div>
-                          <input type="text" placeholder="{{res.approved}}" class="form-control"
-                            [(ngModel)]="res.approved">
+                          <input type="text" class="form-control">
                         </div>
 
 
@@ -462,7 +460,7 @@
               </div>
             </div>
             <div style="background-color: white; width: 625px" class="modal-footer">
-              <button type="submit" (click)="toggleVisibility()" class="btn btn-primary">Update</button>
+              <button type="submit"  class="btn btn-primary">Update</button>
             </div>
           </div>
         </div>
