--- a/ngGearSilo/src/app/components/admin/admin.component.html
+++ b/ngGearSilo/src/app/components/admin/admin.component.html
@@ -9,7 +9,7 @@
     <div class="card-body">
       <h1 class="card-title">User Status</h1>
       <h4><span class="badge badge-secondary border shadow">Total Users: {{ countUsers() }}</span></h4>
-      <h4><span class="badge badge-primary border shadow">Active Users: {{ countUsers() }}</span></h4>
+      <h4><span class="badge badge-success border shadow">Active Users: {{ countUsers() }}</span></h4>
     </div>
     <div class="card-footer">
       <small class="text-muted"></small>
@@ -20,7 +20,7 @@
     <div class="card-body">
       <h1 class="card-title">Gear Status</h1>
       <h4><span class="badge badge-secondary border shadow">Total Gear: {{ countGear() }}</span></h4>
-      <h4><span class="badge badge-primary border shadow">Available Gear: {{ countGear() }}</span></h4>
+      <h4><span class="badge badge-success border shadow">Available Gear: {{ countGear() }}</span></h4>
     </div>
     <div class="card-footer">
       <small class="text-muted"></small>
@@ -31,7 +31,7 @@
     <div class="card-body" >
       <h1 class="card-title">Reservation Status</h1>
       <h4><span class="badge badge-secondary border shadow">Total Reservations: {{ countResv() }}</span></h4>
-      <h4><span class="badge badge-primary border shadow">Active Reservations: {{ countResv() }}</span></h4>
+      <h4><span class="badge badge-success border shadow">Active Reservations: {{ countResv() }}</span></h4>
     </div>
     <div class="card-footer">
       <small class="text-muted"></small>
