--- a/ngGearSilo/src/app/components/admin/user-crud/user-crud.component.html
+++ b/ngGearSilo/src/app/components/admin/user-crud/user-crud.component.html
@@ -1,7 +1,12 @@
 <button class="btn btn-outline-warning">
+  <!-- (click)="setUpdateUser()" -->
   Edit
 </button>
-<!-- (click)="setUpdateUser()" -->
-<button class="btn btn-outline-danger">
+<button class="btn btn-outline-danger" >
   Disable
 </button>
+<!-- Disable will likely be a warn confirmation -->
+
+<!-- ****************************************** -->
+
+<!-- Update form will be here -->
