--- a/ngGearSilo/src/app/components/testing/testing.component.html
+++ b/ngGearSilo/src/app/components/testing/testing.component.html
@@ -35,8 +35,8 @@
                 value="Login"
                 class="btn btn-lg btn-success btn-block text-uppercase"
                 type="submit"
-                (click)="login(loginForm)"
-              >
+                >
+                <!-- (click)="login(loginForm)" -->
                 Sign in
               </button>
               <hr />
