admin link added

--- a/ngGearSilo/src/app/components/footer/footer.component.html
+++ b/ngGearSilo/src/app/components/footer/footer.component.html
@@ -2,4 +2,7 @@
   <div class="container">
     <a href="#">Copyright &copy; Almond Teira 2019 </a>
   </div>
+  <div class="container">
+    <a href="#/admin">Admin</a>
+  </div>
 </footer>
