--- a/ngGearSilo/src/app/components/admin/admin.component.html
+++ b/ngGearSilo/src/app/components/admin/admin.component.html
@@ -1,16 +1,37 @@
-<div class="container-fluid">
-  <h1><strong>Admin Dashboard</strong></h1>
-  <button type="button" class="btn btn-light btn-sm" onClick="history.go(0);">Refresh</button>
+<div class="container-fluid jumbotron">
+  <div class="row">
+    <div class="col">
+      <h1>Admin Dashboard</h1>
+    </div>
+    <div class="col" align="right">
+      <button
+        type="button"
+        class="btn btn-light btn-sm"
+        onClick="history.go(0);"
+      >
+        Refresh Dashboard
+      </button>
+    </div>
+  </div>
 </div>
 <!-- Cards Topper -->
 
+<!--  -->
 <div class="card-deck container-fluid">
   <div class="card bordered shadow mb-3">
     <!-- <img class="card-img-top" src="" alt="Card image cap"> -->
     <div class="card-body">
       <h1 class="card-title">User Status</h1>
-      <h4><span class="badge badge-secondary border shadow">Total Users: {{ countUsers() }}</span></h4>
-      <h4><span class="badge badge-success border shadow">Active Users: {{ countUsers() }}</span></h4>
+      <h4>
+        <span class="badge badge-secondary border shadow"
+          >Total Users: {{ countUsers() }}</span
+        >
+      </h4>
+      <h4>
+        <span class="badge badge-success border shadow"
+          >Active Users: {{ countUsers() }}</span
+        >
+      </h4>
     </div>
     <div class="card-footer">
       <small class="text-muted"></small>
@@ -20,8 +41,16 @@
     <!-- <img class="card-img-top" src=".../100px180/" alt="Card image cap"> -->
     <div class="card-body">
       <h1 class="card-title">Gear Status</h1>
-      <h4><span class="badge badge-secondary border shadow">Total Gear: {{ countGear() }}</span></h4>
-      <h4><span class="badge badge-success border shadow">Available Gear: {{ countGear() }}</span></h4>
+      <h4>
+        <span class="badge badge-secondary border shadow"
+          >Total Gear: {{ countGear() }}</span
+        >
+      </h4>
+      <h4>
+        <span class="badge badge-success border shadow"
+          >Available Gear: {{ countGear() }}</span
+        >
+      </h4>
     </div>
     <div class="card-footer">
       <small class="text-muted"></small>
@@ -29,10 +58,18 @@
   </div>
   <div class="card bordered shadow mb-3">
     <!-- <img class="card-img-top" src="src/assets/img/019 Malibu Beach.jpg" alt="Card image cap"> -->
-    <div class="card-body" >
+    <div class="card-body">
       <h1 class="card-title">Reservation Status</h1>
-      <h4><span class="badge badge-secondary border shadow">Total Reservations: {{ countResv() }}</span></h4>
-      <h4><span class="badge badge-success border shadow">Active Reservations: {{ countResv() }}</span></h4>
+      <h4>
+        <span class="badge badge-secondary border shadow"
+          >Total Reservations: {{ countResv() }}</span
+        >
+      </h4>
+      <h4>
+        <span class="badge badge-success border shadow"
+          >Active Reservations: {{ countResv() }}</span
+        >
+      </h4>
     </div>
     <div class="card-footer">
       <small class="text-muted"></small>
@@ -44,7 +81,8 @@
 
 <div class="container-fluid bg-light">
   <ngb-tabset>
-    <ngb-tab title="Users" > <!-- (tabChange)="selectedUser = null" -->
+    <ngb-tab title="Users">
+      <!-- (tabChange)="selectedUser = null" -->
       <ng-template ngbTabContent>
         <div id="userList" class="container-fluid" *ngIf="!selectedUser">
           <table class="table table-striped table-hover">
@@ -126,7 +164,8 @@
             >
               Back
             </button>
-            <app-user-crud></app-user-crud> <!-- Edit / Delete Button -->
+            <app-user-crud></app-user-crud>
+            <!-- Edit / Delete Button -->
           </div>
         </div>
       </ng-template>
