--- a/ngGearSilo/src/app/components/admin/admin.component.html
+++ b/ngGearSilo/src/app/components/admin/admin.component.html
@@ -6,7 +6,7 @@
     <div class="col" align="right">
       <button
         type="button"
-        class="btn btn-light btn-sm"
+        class="btn btn-light"
         onClick="history.go(0);"
       >
         Refresh Dashboard
@@ -81,8 +81,10 @@
 
 <div class="container-fluid bg-light">
   <ngb-tabset>
-    <ngb-tab title="Users">
-      <!-- (tabChange)="selectedUser = null" -->
+    <ngb-tab >
+      <ng-template ngbTabTitle>
+        <div (click)="selectedUser = null">Users</div>
+      </ng-template>
       <ng-template ngbTabContent>
         <div id="userList" class="container-fluid" *ngIf="!selectedUser">
           <table class="table table-striped table-hover">
@@ -171,7 +173,9 @@
       </ng-template>
     </ngb-tab>
     <ngb-tab>
-      <ng-template ngbTabTitle><b>Gear</b> List</ng-template>
+      <ng-template ngbTabTitle>
+        <div (click)="selectedGear = null">Gear</div>
+      </ng-template>
       <ng-template ngbTabContent>
         <!-- Gear List Tab -->
 
@@ -251,7 +255,10 @@
 
     <!-- Reservation List Tab -->
 
-    <ngb-tab title="Reservations">
+    <ngb-tab>
+      <ng-template ngbTabTitle>
+        <div (click)="selectedResv = null">Reservations</div>
+      </ng-template>
       <ng-template ngbTabContent>
         <div id="resvList" class="container-fluid" *ngIf="!selectedResv">
           <table class="table table-striped table-hover">
