user data aggregation good

--- a/ngGearSilo/src/app/components/admin/admin.component.html
+++ b/ngGearSilo/src/app/components/admin/admin.component.html
@@ -29,7 +29,7 @@
       </h4>
       <h4>
         <span class="badge badge-success border shadow"
-          >Active Users: {{ countUsers() }}</span
+          >Active Users: {{ countActiveU() }}</span
         >
       </h4>
     </div>
