gear data aggregation good

--- a/ngGearSilo/src/app/components/admin/admin.component.html
+++ b/ngGearSilo/src/app/components/admin/admin.component.html
@@ -48,7 +48,12 @@
       </h4>
       <h4>
         <span class="badge badge-success border shadow"
-          >Available Gear: {{ countGear() }}</span
+          >Active Gear: {{ countActiveG() }}</span
+        >
+      </h4>
+      <h4>
+        <span class="badge badge-success border shadow"
+          >Available Gear: {{ countAvailableG() }}</span
         >
       </h4>
     </div>
