--- a/ngGearSilo/src/app/components/admin/admin.component.css
+++ b/ngGearSilo/src/app/components/admin/admin.component.css
@@ -2,3 +2,23 @@
   color: rgb(0, 4, 255);
   cursor: pointer;
 }
+
+/* unvisited link */
+a:link {
+  color: rgb(47, 0, 255);
+}
+
+/* visited link */
+a:visited {
+  color: rgb(209, 8, 142);
+}
+
+/* mouse over link */
+a:hover {
+  color: rgb(63, 194, 31);
+}
+
+/* selected link */
+a:active {
+  color: rgb(245, 6, 6);
+}
