--- a/ngGearSilo/src/app/components/gear-list/gear-list.component.css
+++ b/ngGearSilo/src/app/components/gear-list/gear-list.component.css
@@ -2,64 +2,64 @@
   width: 50%;
   max-width: 400px;
   height: auto;
-
 }
 .gear-img-list {
   width: 50%;
   max-width: 150px;
   height: auto;
-
 }
 .contaner-fluid {
   font-family: Arial, Helvetica, sans-serif;
-
 }
 
 .btn {
-  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
 }
 
-.active-pink-4 input[type=text]:focus:not([readonly]) {
+.btn:hover {
+  color: orange;
+  background-color: white;
+}
+
+.active-pink-4 input[type="text"]:focus:not([readonly]) {
   border: 1px solid orange;
   box-shadow: 0 0 0 1px orange;
-  }
-  .active-pink-3 input[type=text] {
-  border: 1px solid ;
-  box-shadow: 0 0 0 1px ;
-  }
+}
+.active-pink-3 input[type="text"] {
+  border: 1px solid;
+  box-shadow: 0 0 0 1px;
+}
 
-  form{
-    display: inline !important;
-    }
-
+/* form {
+  display: inline !important;
+} */
 
 /* CARDS */
 .star-rating li {
-	padding: 0;
+  padding: 0;
 }
 .star-rating i {
-	font-size: 30px;
-	color: #ffc000;
+  font-size: 30px;
+  color: #ffc000;
+}
+
+#panels {
+  width: 150%;
 }
 
 #panels:hover {
   background-color: white;
-  transition: transform .3s;
+  transition: transform 0.3s;
   transform: scale(1.01);
   transform-style: flat;
-
-
-
 }
 
 .list-group {
   /* background-color: blue; */
   border: none;
-
 }
 
 .pic {
-
   height: 50px;
   width: 50px;
   border-radius: 45%;
@@ -94,7 +94,6 @@
   width: 300px;
   height: 300px;
 }
-
 
 /* body {font-family: Arial, Helvetica, sans-serif;}
 * {box-sizing: border-box;} */
@@ -153,13 +152,13 @@
 
 /* Set a style for the submit/send button */
 .form-container .btn {
-  background-color: #4CAF50;
+  background-color: #4caf50;
   color: white;
   padding: 16px 20px;
   border: none;
   cursor: pointer;
   width: 100%;
-  margin-bottom:10px;
+  margin-bottom: 10px;
   opacity: 0.8;
 }
 
@@ -169,16 +168,16 @@
 }
 
 /* Add some hover effects to buttons */
-.form-container .btn:hover, .open-button:hover {
+.form-container .btn:hover,
+.open-button:hover {
   opacity: 1;
 }
 
- .carousel {
+.carousel {
   /* display: block; */
   width: 80%;
   height: auto;
 }
-
 
 .carousel-inner > .carousel-item > img {
   display: block;
@@ -207,7 +206,7 @@
 
 .resImage {
   position: absolute;
-  clip: rect(0px,400px,300px,0px);
+  clip: rect(0px, 400px, 300px, 0px);
   align-content: center;
   margin-top: -50px;
   background-position: center center !important;
@@ -219,6 +218,18 @@
   border-bottom: orange;
   border-style: solid;
   mask-border-width: 5px;
+}
 
+.form-control:valid {
+  border-color: orange !important;
+}
 
+input[type=text] {
+  width: 50%;
+  -webkit-transition: width 0.4s ease-in-out;
+  transition: width 0.4s ease-in-out;
+}
+
+input[type=text]:focus {
+  width: 53%;
 }
