--- a/ngGearSilo/src/app/components/gear-list/gear-list.component.html
+++ b/ngGearSilo/src/app/components/gear-list/gear-list.component.html
@@ -10,15 +10,39 @@
     <div class="col-1"></div>
     <div class="col-10">
       <div>
-        <form class="form-group row" ngNativeValidate>
+        <!-- <form class="form-inline" ngNativeValidate>
           <div class="col-xs-4">
-            <div class="active-pink-3 active-pink-4 mb-4">
-              <input class="form-control" type="text" size="35" placeholder="Search" aria-label="Search" name="keyword"
-                [(ngModel)]="keyword" minlength="1" maxlength="100">
-              <button class="btn btn-dark my-2 my-sm-0" type="submit" (click)="search(); selected=null">Search by
-                keyword</button>
+
+            <div class="form-group mx-sm-3 mb-2">
+              <div class="active-pink-3 active-pink-4 mb-4">
+                <input class="form-control" type="text" size="35" placeholder="Search" aria-label="Search"
+                  name="keyword" [(ngModel)]="keyword" minlength="1" maxlength="100">
+                <button class="btn btn-dark my-2 my-sm-0" type="submit" (click)="search(); selected=null">Search by
+                  keyword</button>
+              </div>
+            </div> -->
+
+        <!-- Reset Button -->
+        <!-- <div class="col-xs-4">
+              <button class="btn btn-dark my-2 my-sm-0" (click)="ngOnInit()">See all items</button>
             </div>
+            <br>
+            <br>
           </div>
+        </form> -->
+
+
+        <!-- SEARCH BAR -->
+        <form class="form-inline" ngNativeValidate>
+          <div class="input-group-prepend">
+            <button class="btn btn-outline-secondary" style="margin: 5px" type="submit"
+              (click)="search(); selected=null">Search
+            </button>
+          </div>
+          <input class="form-control" type="text" size="35" placeholder="Search by Keyword" aria-label="Search"
+            name="keyword" [(ngModel)]="keyword" minlength="1" maxlength="100">
+            <!-- RESET BUTTON -->
+          <button style="margin-left: 270px" class="btn btn-outline-secondary" (click)="ngOnInit()">See all items</button>
         </form>
 
         <!-- <div>
@@ -27,12 +51,6 @@
           </ul>
         </div> -->
 
-        <!-- Reset Button -->
-        <div class="col-xs-4">
-          <button class="btn btn-dark my-2 my-sm-0" (click)="ngOnInit()">See all items</button>
-        </div>
-        <br>
-        <br>
 
         <!-- SEARCHED GEAR RESULTS -->
 
@@ -150,7 +168,9 @@
                       <div class="col-xs-4">
                         <p>{{item.user.firstName | titlecase}}</p>
                         <br>
-                        <h6 style="margin-left: -10px ;">Owner Rating:</h6>
+                        <div *ngIf="item.user.userLenderRating > 0 ">
+                          <h6 style="margin-left: -5px;">Lender Rating: {{item.user.userLenderRating}}</h6>
+                        </div>
                         <ngb-rating [(rate)]="item.user.userLenderRating" [readonly]="true" max="5">
                           <ng-template let-fill="fill" let-index="index">
                             <span class="star" [class.filled]="fill === 100" [class.bad]="index < 0">&#9733;</span>
@@ -165,7 +185,6 @@
           </div>
         </div>
       </div>
-
 
 
 
