--- a/ngGearSilo/src/app/components/profile/profile.component.html
+++ b/ngGearSilo/src/app/components/profile/profile.component.html
@@ -45,7 +45,8 @@
         <!-- MY RESERVATIONS BUTTON -->
         <button data-toggle="modal" data-target="#myGearReservations" class="btn btn-defult"><i aria-hidden="true"></i>
           Gear I am lending </button>
-        <button data-toggle="modal" data-target="#myGearReservations" class="btn btn-defult"><i aria-hidden="true"></i>
+        <button data-toggle="modal" data-target="#reservationForGearIamRenting" class="btn btn-defult"><i
+            aria-hidden="true"></i>
           Gear I am renting</button>
 
 
@@ -386,7 +387,7 @@
         </div>
 
 
-        <!-- MY GEAR RESERVATIONS  MODAL -->
+        <!-- MY GEAR I AM LENDING RESERVTION MODAL -->
         <div class="modal fade modal-lg" id="resModal" id="myGearReservations" tabindex="-1" role="dialog"
           aria-labelledby="exampleModalLongTitle" aria-hidden="true">
 
@@ -428,15 +429,15 @@
                         <div class="input-group mb-3">
 
                           <!-- <form> -->
-                            <input class="form-control" type="text"  aria-label="Search"
-                              name="approved" [(ngModel)]="selectedRes.approved">
+                          <input class="form-control" type="text" aria-label="Search" name="approved"
+                            [(ngModel)]="selectedRes.approved">
 
-                              <!-- <input class="form-control" type="hidden"  value="res.user.id" aria-label="Search"
+                          <!-- <input class="form-control" type="hidden"  value="res.user.id" aria-label="Search"
                               name="approved" [(ngModel)]="selectedRes.gearId.user.id"> -->
 
 
-                            <button type="submit"  (click)="onClickReservation(res)">
-                              {{res.approved}}</button>
+                          <button type="submit" (click)="onClickReservation(res)">
+                            {{res.approved}}</button>
                           <!-- </form> -->
                           <!-- <div style="background-color: white; width: 625px" > -->
                           <!-- <button type="submit"  (click)="onClickReservation(res)" class="btn btn-primary">Update</button> -->
@@ -447,31 +448,101 @@
                     </tr>
                   </tbody>
                 </table>
+                <div style="float: left" class="modal-footer">
+                  <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                </div>
               </div>
             </div>
-
           </div>
         </div>
       </div>
 
 
-      <!-- ARE YOU SURE YOU WANT TO DELETE THIS MODAL -->
-      <div class="modal fade" id="popupDelete" tabindex="-1" role="dialog" aria-labelledby="exampleModalLongTitle"
-        aria-hidden="true">
-        <div class="modal-dialog" role="document">
-          <div class="modal-content">
-            <div class="modal-header">
 
+      <!-- THE GEAR I AM RENTING RESERVATION MODAL -->
+      <div class="modal fade modal-lg" id="reservationForGearIamRenting" tabindex="-1" role="dialog"
+        aria-labelledby="exampleModalLongTitle" aria-hidden="true">
+
+        <div class="modal-dialog" role="document">
+          <div style="width: 800px" class="modal-content">
+            <div class="modal-header">
+              <h5 class="modal-title" id="exampleModalLongTitle"><strong style="color: lightcoral;">
+                  Gear I am Renting
+                </strong> </h5>
+              <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+              </button>
             </div>
-            <div class="modal-body" id="popupGear">
-              <h5>Are you sure you want to delete this item?</h5>
-              <div class="modal-footer">
-                <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
-                <button type="button" (click)="deleteGear()" class="btn btn-primary" data-dismiss="modal">Delete
-                  Item</button>
+            <div class="modal-body1">
+              <table class="table table-hover">
+                <col width="80px">
+                <col width="80px">
+                <col width="80px">
+                <col width="150px">
+                <!-- <col width="10px"> -->
+
+                <thead>
+                  <tr>
+                    <th scope="col">Lender</th>
+                    <th scope="col">From:</th>
+                    <th scope="col">To:</th>
+                    <th scope="col">Approved</th>
+                    <!-- <th></th> -->
+
+
+                  </tr>
+                </thead>
+                <tbody>
+                  <tr *ngFor="let res of myReservations; let i = index">
+                    <td> {{res.gearId.user.firstName | titlecase}} {{res.gearId.user.lastName | titlecase}}</td>
+                    <td>{{res.openDate | date}}</td>
+                    <td>{{res.closeDate | date}}</td>
+                    <td>
+                    </td>
+                    <td></td>
+                  </tr>
+                </tbody>
+              </table>
+              <div style="float: left" class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
               </div>
+            </div>
+          </div>
+
+        </div>
+      </div>
+    </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+    <!-- ARE YOU SURE YOU WANT TO DELETE THIS MODAL -->
+    <div class="modal fade" id="popupDelete" tabindex="-1" role="dialog" aria-labelledby="exampleModalLongTitle"
+      aria-hidden="true">
+      <div class="modal-dialog" role="document">
+        <div class="modal-content">
+          <div class="modal-header">
+
+          </div>
+          <div class="modal-body" id="popupGear">
+            <h5>Are you sure you want to delete this item?</h5>
+            <div class="modal-footer">
+              <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
+              <button type="button" (click)="deleteGear()" class="btn btn-primary" data-dismiss="modal">Delete
+                Item</button>
             </div>
           </div>
         </div>
       </div>
     </div>
+  </div>
